--- a/twitter_mock/templates/base.html
+++ b/twitter_mock/templates/base.html
@@ -26,14 +26,15 @@
 
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-            
-            <a class="nav-item nav-link" href="#">New Post</a>
-            <a class="nav-item nav-link" href="#">Account</a>
-            <a class="nav-item nav-link" href="#">Logout</a>
-            
-              <a class="nav-item nav-link" href="{{ url_for('auth.login')}}">Login</a>
-              <a class="nav-item nav-link" href="{{ url_for('auth.register')}}">Register</a>
-          
+              {% if current_user.is_authenticated %}
+              <a class="nav-item nav-link" href="{{ url_for('site.createtweet')}}">New Post</a>
+              <a class="nav-item nav-link" href="{{ url_for('site.explore')}}">Explore</a>
+              <a class="nav-item nav-link" href="{{ url_for('site.explore')}}">Account</a>
+              <a class="nav-item nav-link" href="{{ url_for('auth.logout')}}">Logout</a>
+              {% else %}
+                <a class="nav-item nav-link" href="{{ url_for('auth.login')}}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('auth.register')}}">Register</a>
+              {% endif %}
             </div>
           </div>
         </div>
