--- a/twitter_mock/static/main.css
+++ b/twitter_mock/static/main.css
@@ -9,7 +9,7 @@ body {
   }
   
   .bg-steel {
-    background-color: #2600fc;
+    background-color: #616161;
   }
   
   .site-header .navbar-nav .nav-link {
