--- a/twitter_mock/templates/base.html
+++ b/twitter_mock/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 ​
-    <link rel="stylesheet" type="text/css" href="..//static/main.css">
+    <link rel="stylesheet" type="text/css" href="../static/main.css">
     <title>Tweeter</title>
 </head>
 <body>
@@ -40,9 +40,9 @@
         </div>
       </nav>
     </header>
-    <main role="main" class="container">
-      <div class="row">
-        <div class="col-md-8">
+    <main role="main" class="container" id="home-container">
+      <div class="row" id="home-row">
+        <div class="col-md-8" id="home-col">
           {% block content %}{% endblock %}
         </div>
 ​
